tests/data/placebo/test_only_ports_and_cidr_ingress/ec2.AuthorizeSecurityGroupIngress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "dcd0fe69-e0c8-49f0-ab2a-fd77daf2197e", 
            "HTTPHeaders": {
                "date": "Thu, 18 Oct 2018 11:59:56 GMT", 
                "content-length": "259", 
                "content-type": "text/xml;charset=UTF-8", 
                "server": "AmazonEC2"
            }
        }
    }
}
