tests/data/placebo/test_only_ports_and_cidr_ingress/ec2.AuthorizeSecurityGroupIngress_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "5f2a286f-c3c7-4d3a-b74e-f2c20fba6e3e", 
            "HTTPHeaders": {
                "date": "Thu, 18 Oct 2018 11:59:57 GMT", 
                "content-length": "259", 
                "content-type": "text/xml;charset=UTF-8", 
                "server": "AmazonEC2"
            }
        }
    }
}
