tests/data/placebo/test_only_ports_and_cidr_ingress/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-02a60363e2b087ff8",
    "ResponseMetadata": {}
  }
}
