tests/data/placebo/test_only_ports_and_cidr_ingress/ec2.CreateVpc_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "Vpc": {
      "VpcId": "vpc-007084954cd5c3c96",
      "InstanceTenancy": "default",
      "Tags": [],
      "CidrBlockAssociationSet": [
        {
          "AssociationId": "vpc-cidr-assoc-04f26949fdecdc5b1",
          "CidrBlock": "10.4.0.0/16",
          "CidrBlockState": {
            "State": "associated"
          }
        }
      ],
      "Ipv6CidrBlockAssociationSet": [],
      "State": "pending",
      "DhcpOptionsId": "dopt-df6702bb",
      "CidrBlock": "10.4.0.0/16",
      "IsDefault": false
    }
  }
}
